# influencer-roi-scorer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
db/migrations/: 001_roi_schema.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mart_campaign_summary.sql  mart_influencer_roi.sql  schema.yml
dbt/models/staging/: sources.yml  stg_campaigns.sql  stg_niche_scores.sql  stg_profiles.sql
scoring/: db.py  niche_scorer.py  roi_engine.py
scripts/: seed_demo.py
