[project]
name = "influencer-roi-scorer"
version = "0.2.0"
description = "Compare Instagram influencers by campaign ROI — dbt + Gemini + Apify + Metabase"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.35.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "plotly>=5.21.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.8.0",
    "apify-client>=1.7.1",
    "dbt-postgres>=1.8.0",
    "python-dotenv>=1.0.1",
    "numpy<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
